--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <head>
         <meta charset="utf-8">
         <title>JavaScript and TypeScript</title>
+        <script>
+            alert('test alert');
+        </script>
     </head>
     <body>
         <h1>
