Ejemplo de variables

--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>JavaScript and TypeScript</title>
-        <script>
-            alert('test alert');
-        </script>
+        
     </head>
     <body>
         <h1>
@@ -14,5 +12,12 @@
         </h1>
         <p>Temas:</p>
 
+
+        
+        <!-- SCRIPT -->
+        <script src="main.js" type="text/javascript"></script>
+
     </body>
+
+
 </html>
