--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
         <h1>
             JavaScript
         </h1>
+
+        <div id="info"></div>
+
         <p>Temas:</p>
 
 
-        
+
         <!-- SCRIPT -->
         <script src="main.js" type="text/javascript"></script>
 
