--- a/index.html
+++ b/index.html
@@ -11,9 +11,18 @@
             JavaScript
         </h1>
         <hr>
+
+        <!-- Datos personales -->
         <div id="info"></div>
         <hr>
+
+        <h2>Colores:</h2>
+        <div id="colores"></div>
+
+        <hr>
+
         <p>Temas:</p>
+        <div id="temas"></div>
 
         <!-- SCRIPT -->
         <script src="main.js" type="text/javascript"></script>
