--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <body>
         <h1>
             JavaScript
-        </h1>
+        </h1> 
+        <p>Temas:</p>
+        <div id="temas"></div>
+
         <hr>
+
 
         <!-- Datos personales -->
         <div id="info"></div>
@@ -21,8 +25,8 @@
 
         <hr>
 
-        <p>Temas:</p>
-        <div id="temas"></div>
+        <div id="despedida"></div>
+
 
         <!-- SCRIPT -->
         <script src="main.js" type="text/javascript"></script>
