--- a/javascript/index.html
+++ b/javascript/index.html
@@ -29,7 +29,7 @@
 
 
         <!-- SCRIPT -->
-        <script src="main.js" type="text/javascript"></script>
+        <script src="newMain.js" type="text/javascript"></script>
 
     </body>
 
